# rusty_coin

./: .env  Cargo.toml  Dockerfile  README.md  compose.yaml  diesel.toml
app/: Cargo.toml
database/: Cargo.toml
database/src/: connection.rs  schema.rs
factories/: Cargo.toml
factories/src/: blockchain.rs  users.rs
migrations/2024-11-08-105801_create_users/: up.sql
migrations/2024-11-12-160341_create_login/: down.sql  up.sql
migrations/2024-12-18-124430_create_cards/: down.sql  up.sql
migrations/2024-12-18-130213_create_all/: down.sql  up.sql
migrations/2024-12-24-120812_create_blockchain/: down.sql  up.sql
models/: Cargo.toml
models/src/: lib.rs
models/src/blockchain/: blocks.rs  contracts.rs  transactions.rs
models/src/user/: accounts.rs  mod.rs  payments.rs  profiles.rs  settings.rs  users.rs
models/src/warehouse/: cards.rs  login_histories.rs  mod.rs
serialisers/: Cargo.toml
serialisers/src/: lib.rs
serialisers/src/blockchain/: blocks.rs  contracts.rs  mod.rs  transactions.rs
serialisers/src/user/: accounts.rs  mod.rs  payments.rs  profiles.rs  settings.rs  users.rs
serialisers/src/warehouse/: cards.rs  login_histories.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/constants/: blockchain.rs  mod.rs  users.rs
shared/src/cryptography/: encoding.rs  encryption.rs  hashing.rs  mod.rs  utils.rs
shared/src/utils/: helpers.rs
