[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../database" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "2.2.0", features = ["postgres"] }
serde = { version = "1.0.147", features = ["derive"] }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]