[package]
name = "serialisers"
version = "0.1.0"
edition = "2021"

[dependencies]
models = { path = "../models" }
database = { path = "../database" }
shared = { path = "../shared" }
diesel = { version = "2.2.0", features = ["postgres"] }
chrono = { version = "0.4.38" }


[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]